<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LeteRSS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="refresh">Refresh</string>
    <string name="addFeed">Add</string>
    <string name="dialogName">Add new feed</string>
    <string name="dialogTitle">Feed title</string>
    <string name="dialogUrl">URL</string>
    <string name="cancel">Cancel</string>
    
    <string-array name="rssFeedDialog">
        <item name="delete">Delete</item>
        <item name="update">Update</item>
    </string-array>

</resources>
